# fp-bootstrapper

./: package-lock.json  package.json
src/: App.tsx  StateContext.ts  main.tsx  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  state.rs
src/components/: Checkbox.tsx  ComponentTreeView.tsx
src/pages/: FailurePage.tsx  FinishPage.tsx  InstallationPage.tsx  SetupComponentsPage.tsx  SetupPage.tsx
src/redux/: store.ts
src/redux/state/: stateSlice.ts
