[package]
name = "fp-bootstrapper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-ask", "dialog-open", "dialog-message", "shell-open"] }
thiserror = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.6"
tokio = "1"
reqwest = { version = "0.12", features = ["stream"] }
tempfile = "3.10"
futures = "0.3"
zip = "0.6"
walkdir = "2.3"
crc32fast = "1.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
